# PlaudSync

./: .env.example  .gitignore  CLAUDE.md  DEV_LOG.md  README.md  SPEC.md  pyproject.toml  run-ui.bat
.claude/: settings.json
.claude/effort-coach/: RULES.md  settings_fragment.json
.claude/hooks/: pytest_on_edit.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/_prototype/: PlaudSync UI.html
frontend/scripts/: check-bundle-size.mjs  postbuild.mjs
frontend/src/: App.tsx  index.css  main.tsx
scripts/: install-task-scheduler.ps1  sentry_smoke.py  start-tray.bat  uninstall-task-scheduler.ps1
src/plaudsync/: __init__.py  __main__.py  auth.py  categorization.py  classifier.py  config.py  locking.py  observability.py  path_resolver.py  plaud_client.py  progress.py  schedule.py  state.py  sync.py  sync_runner.py
tests/: conftest.py  test_api_state_progress_e2e.py  test_auth.py  test_categorization.py  test_classifier.py  test_config.py  test_locking.py  test_main_exit_codes.py  test_main_exit_codes_sync.py  test_main_ui_subcommand.py  test_observability_sync.py  test_path_resolver.py  test_plaud_client.py  test_plaud_client_download.py  test_plaud_client_listing.py  test_plaud_client_region.py  test_progress.py  test_schedule.py  test_smoke.py  test_state.py  test_state_migrations.py  test_state_reader_progress.py  test_sync.py  test_sync_only_foldered.py  test_sync_progress_phases.py  test_sync_reclassify.py  test_sync_skip_unknown_project.py  test_ui_app.py  test_ui_auth_mask.py  test_ui_config_io.py  test_ui_runner.py  test_ui_schedule_endpoint.py  test_ui_state_reader.py  test_ui_sync_starter.py
tests/cassettes/: test_verify_expired_raises_PlaudTokenExpired.yaml  test_verify_success.yaml
tests/evals/: golden_set.yaml
tests/integration/: test_subcommands.py  test_sync_runner.py  test_tray_app_bootstrap.py  test_tray_scheduler_loop.py  test_tray_single_instance.py  test_ui_runner_helpers.py
tests/unit/: test_tray_icon.py  test_tray_menu.py  (+2 more)
(+82 files in other folders)
